fix(ui): better defaults for not overflowing screen size in some pages

--- a/src/app/pages/character/inventory/inventory.page.scss
+++ b/src/app/pages/character/inventory/inventory.page.scss
@@ -13,7 +13,7 @@
   padding-left: 10px;
 
   overflow-y: auto;
-  max-height: calc(100vh - 350px);
+  max-height: calc(100vh - 250px);
 }
 
 .popup-icon {
