--- a/src/app/pages/character/resources/resources.page.scss
+++ b/src/app/pages/character/resources/resources.page.scss
@@ -13,5 +13,5 @@
   padding-left: 10px;
 
   overflow-y: auto;
-  max-height: calc(100vh - 350px);
+  max-height: calc(100vh - 250px);
 }
